--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build & Push Image
       run: |
-        echo "${{ secrets.DOCKERPW }}" | docker login -u "hariprasad326" --password-stdin
-        docker image build -t hariprasad326/nodeapp:v1 .
-        docker push hariprasad326/nodeapp:v1
+        echo "${{ secrets.DOCKERPW }}" | docker login -u "virtuall12" --password-Songks4268!
+        docker image build -t virtuall12/node-web-app:latest .
+        docker push virtuall12/node-web-app:latest
