--- a/deployment.yml
+++ b/deployment.yml
@@ -18,4 +18,22 @@ spec:
       - name: nodeserver
         image: virtuall12/node-web-app:latest
         ports:
-        - containerPort: 3000
+        - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nodeapp-service
+  namespace: default
+  labels:
+    app: nodeapp
+spec:
+  externalTrafficPolicy: Local
+  ports:
+  - name: http
+    port: 80
+    protocol: TCP
+    targetPort: 80
+  selector:
+    app: nodeapp
+  type: NodePort
